
Package: PSCBS
==============

Version: 0.32.0 [2013-01-16]
o Now updateMeans() and updateMeansTogether() methods can estimate
  the mean levels either by the sample mean or the median.


Version: 0.31.0 [2013-01-05]
o CLEANUP: Now packages R.methodsS3 and R.oo are only imported.
o CLEANUP: Package no longer explicitly imports digest.


Version: 0.30.0 [2012-11-05]
o GENERALIZATION: Now bootstrapTCNandDHByRegion() works for more 
  "flavors", e.g the default ('tcn') used by segmentByNonPairedPSCBS().


Version: 0.29.9 [2012-11-05]
o DOCUMENTATION FIX: example(segmentByNonPairedPSCBS) was for
  the paired case.
o CRAN POLICY: Further speed up of examples such that they run faster
  with R CMD check.


Version: 0.29.8 [2012-11-04]
o CLEANUP: Replaced all whichVector() with which(), because the
  latter is now the fastest again.


Version: 0.29.7 [2012-11-03]
o Updated deprecated ggplot2 functions in the RSP reports.


Version: 0.29.6 [2012-11-01]
o Bumped the package dependencies.
o CRAN POLICY: Made the examples run faster for R CMD check.


Version: 0.29.5 [2012-10-16]
o ROBUSTNESS/BUG FIX: No longer passing '...' to NextMethod(), cf.
  R-devel thread 'Do *not* pass '...' to NextMethod() - it'll do it 
  for you; missing documentation, a bug or just me?' on Oct 16, 2012.   


Version: 0.29.4 [2012-09-23]
o Now plotTracks() [and plotTracksManyChromosomes()] draws segment levels
  such that it is easier to see them even when they are overlapping.

 
Version: 0.29.3 [2012-09-21]
o SPEEDUP: By default bootstrapTCNandDHByRegion() for PairedPSCBS no
  longer do sanity checks within the bootstrap loop.  This significantly
  speed up the method.  To run checks, use argument .debug=TRUE.
  In addition, the callNnn() methods that need to call this method,
  does it by decreasing the amount of verbose output substantially,
  which in turn speeds up the process a fair bit.
o Now getSegments(..., splitters=TRUE) for CBS and PSCBS inserts NA