@@ -16,8 +16,7 @@
 
 
  \description{
-   Segments allele-specific DNA copy number data to detect regions
-	with abnormal copy number within each parental chromosome.
+   Segmentation of allele-specific DNA copy number data and detection of regions with abnormal copy number within each parental chromosome.  Both tumor-normal paired and tumor-only analyses are supported..
 
    This package should be considered to be in an alpha or beta phase.
    You should expect the API to be changing over time.
@@ -25,11 +24,11 @@
 
  \section{Requirements}{
    This package requires external packages
-   R.methodsS3 (>= 1.4.2), R.oo (>= 1.10.1), R.utils (>= 1.18.0), utils, R.methodsS3 (>= 1.4.2), R.oo (>= 1.10.1), DNAcopy (>=
-1.27.2), R.rsp (>= 0.8.2),
+   R.utils (>= 1.19.3), utils, R.methodsS3 (>= 1.4.2), R.oo (>= 1.11.7), R.utils (>=
+1.19.3), DNAcopy (>= 1.27.2), R.rsp (>= 0.8.2),
    and also suggests DNAcopy (>= 1.27.2), aroma.light (>= 1.22.0), matrixStats (>=
-0.5.3), R.cache (>= 0.6.3), digest (>= 0.5.2), Hmisc (>=
-3.9-3), ggplot2 (>= 0.9.2.1).
+0.6.2), R.cache (>= 0.6.5), Hmisc (>= 3.10-1), ggplot2 (>=
+0.9.3).
  }
 
  \section{Installation and updates}{
