@@ -1,0 +1,80 @@
+library("PSCBS")
+
+# Just to pass CRAN's timing constraints for 'R CMD check'
+PSCBS:::.prememoize()
+verbose <- Arguments$getVerbose(-10*interactive(), timestamp=TRUE)
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Load SNP microarray data
+# (note to package developers: this example data set may
+#  be replaced in a future release of the package)
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+pathname <- system.file("data-ex/PairedPSCBS,exData,chr01.Rbin", package="PSCBS")
+data <- R.utils::loadObject(pathname)
+str(data)
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Paired PSCBS segmentation
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Drop single-locus outliers
+dataS <- dropSegmentationOutliers(data)
+
+# Speed up example by segmenting fewer loci
+dataS <- dataS[seq(from=1, to=nrow(data), by=20),]
+
+str(dataS)
+
+R.oo::attachLocally(dataS)
+
+# Non-Paired PSCBS segmentation
+fit <- segmentByNonPairedPSCBS(CT, betaT=betaT,
+                            chromosome=chromosome, x=x,
+                            avgDH="median",
+                            seed=0xBEEF, verbose=verbose)
+print(fit)
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Bootstrap segment level estimates
+# (used by the AB caller, which, if skipped here,
+#  will do it automatically)
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+fit <- bootstrapTCNandDHByRegion(fit, B=100, verbose=verbose)
+print(fit)
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Calling segments in allelic balance (AB)
+# NOTE: Ideally, this should be done on whole-genome data
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Explicitly estimate the threshold in DH for calling AB
+# (which be done by default by the caller, if skipped here)
+deltaAB <- estimateDeltaAB(fit, flavor="qq(DH)", verbose=verbose)
+print(deltaAB)
+
+fit <- callAB(fit, delta=deltaAB, verbose=verbose)
+print(fit)
+
+
+# Even if not explicitly specified, the estimated 
+# threshold parameter is returned by the caller
+stopifnot(fit$params$deltaAB == deltaAB)
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Calling segments in loss-of-heterozygosity (LOH)
+# NOTE: Ideally, this should be done on whole-genome data
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Explicitly estimate the threshold in C1 for calling LOH
+# (which be done by default by the caller, if skipped here)
+deltaLOH <- estimateDeltaLOH(fit, flavor="minC1|nonAB", verbose=verbose)
+print(deltaLOH)
+
+fit <- callLOH(fit, delta=deltaLOH, verbose=verbose)
+print(fit)
+plotTracks(fit)
+
+# Even if not explicitly specified, the estimated 
+# threshold parameter is returned by the caller
+stopifnot(fit$params$deltaLOH == deltaLOH)
